# theo

./: LICENSE  README.md  dune-project  index.html  theo.opam
.github/workflows/: docs.yml
src/lib-theo/: dune  theo.ml  theo.mli
test/: dune  repro_recursion.expected  repro_recursion.ml  test_benchmark.expected  test_benchmark.ml  test_ite_constant.expected  test_ite_constant.ml  test_logical_checks.expected  test_logical_checks.ml  test_operations.expected  test_operations.ml  test_performance.ml  test_properties.ml  test_shortest_sat.expected  test_shortest_sat.ml  theories.ml
theo/: index.html
theo/Theo/: index.html
theo/Theo/Combine/: index.html
theo/Theo/Combine/Left/: index.html
theo/Theo/Combine/Left/argument-1-F/: index.html
theo/Theo/Combine/Right/: index.html
theo/Theo/Combine/Right/argument-1-F/: index.html
theo/Theo/Combine/argument-1-A/: index.html
theo/Theo/Combine/argument-2-B/: index.html
theo/Theo/Eq/: index.html
theo/Theo/Eq/Syntax/: index.html
theo/Theo/Eq/argument-1-C/: index.html
theo/Theo/Leq/: index.html
theo/Theo/Leq/Syntax/: index.html
theo/Theo/Leq/argument-1-C/: index.html
theo/Theo/Make/: index.html
theo/Theo/Make/Constraint/: index.html
theo/Theo/Make/Syntax/: index.html
theo/Theo/Make/argument-1-T/: index.html
theo/Theo/Var/: index.html
theo/Theo/Void/: index.html
theo/Theo/module-type-Comparable/: index.html
theo/Theo/module-type-Formula/: index.html
theo/Theo/module-type-Primitive_theory/: index.html
theo/Theo/module-type-Theory/: index.html
(+2 files in other folders)
